# Optimization

./: build.gradle  settings.gradle  基础知识  性能优化.txt
app/: Proguard.docx  build.gradle  proguard-android.txt-3.5.1(混淆规则).pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/bitmap/: CMakeLists.txt  build.sh  compress.cpp  编译步骤.txt
app/src/main/res/layout/: activity_basic.xml  activity_bitmap.xml  activity_bitmap_file_compress.xml  activity_bitmap_large_image.xml  activity_component.xml  activity_fragment_dynamic_use.xml  activity_fragment_lazy_load.xml  activity_fragment_lazy_load_use.xml  (+25 more)
gradle/wrapper/: gradle-wrapper.properties
reinforce/: build.gradle
reinforce-core/: CMakeLists.txt  build.gradle
reinforce-core/src/androidTest/java/com/bryanrady/reinforce_core/: ExampleInstrumentedTest.java
reinforce-core/src/main/: AndroidManifest.xml
reinforce-core/src/main/cpp/: native-lib.c  native-lib.cpp
reinforce-core/src/main/java/com/bryanrady/reinforce_core/: DecrptUtils.java  ProxyApplication.java  ReflexUtils.java  Zip.java
reinforce-core/src/main/res/values/: strings.xml
reinforce-core/src/test/java/com/bryanrady/reinforce_core/: ExampleUnitTest.java
reinforce-tools/: reinforce.jks
reinforce/src/main/: AndroidManifest.xml
tinker/: build.gradle  dex.keep
tinker/src/main/: AndroidManifest.xml
tinkeruse/: build.gradle  proguard-rules.pro  tinkeruse.jks
tinkeruse/src/main/: AndroidManifest.xml
tinkeruse/脚本相关/: 命令.txt
tinkeruse/脚本相关/output/: dex_log.txt  log.txt  patch_signed.apk  patch_unsigned.apk
(+157 files in other folders)
